--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import 'react-toastify/dist/ReactToastify.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500&display=swap');
 @tailwind base;
 @tailwind components;
